--- a/SourceCode/SourceCode.vcxproj
+++ b/SourceCode/SourceCode.vcxproj
@@ -149,14 +149,20 @@
   <ItemGroup>
     <ClCompile Include="game.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="IBO.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="shaderProgram.cpp" />
     <ClCompile Include="stb.cpp" />
+    <ClCompile Include="VAO.cpp" />
+    <ClCompile Include="VBO.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
+    <ClInclude Include="IBO.h" />
     <ClInclude Include="shaderProgram.h" />
+    <ClInclude Include="VAO.h" />
+    <ClInclude Include="VBO.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
   <ItemGroup>
