--- a/SourceCode/SourceCode.vcxproj
+++ b/SourceCode/SourceCode.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cameraProgram.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="IBO.cpp" />
@@ -159,6 +160,7 @@
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cameraProgram.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="IBO.h" />
     <ClInclude Include="shaderProgram.h" />
