--- a/SourceCode/SourceCode.vcxproj
+++ b/SourceCode/SourceCode.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="SourceCode\src\buffer.cpp" />
     <ClCompile Include="SourceCode\src\cameraProgram.cpp" />
+    <ClCompile Include="SourceCode\src\face.cpp" />
     <ClCompile Include="SourceCode\src\game.cpp" />
     <ClCompile Include="SourceCode\src\main.cpp" />
     <ClCompile Include="SourceCode\src\network_client.cpp" />
@@ -171,10 +172,14 @@
   <ItemGroup>
     <ClInclude Include="SourceCode\src\buffer.h" />
     <ClInclude Include="SourceCode\src\cameraProgram.h" />
+    <ClInclude Include="SourceCode\src\face.h" />
     <ClInclude Include="SourceCode\src\game.h" />
     <ClInclude Include="SourceCode\src\network_client.h" />
     <ClInclude Include="SourceCode\src\network_server.h" />
+    <ClInclude Include="SourceCode\src\quad.h" />
+    <ClInclude Include="SourceCode\src\quadGroups.h" />
     <ClInclude Include="SourceCode\src\shaderProgram.h" />
+    <ClInclude Include="SourceCode\src\side.h" />
     <ClInclude Include="SourceCode\src\textureManager.h" />
     <ClInclude Include="SourceCode\src\VAO.h" />
     <ClInclude Include="SourceCode\src\window.h" />
