--- a/SourceCode/SourceCode.vcxproj.filters
+++ b/SourceCode/SourceCode.vcxproj.filters
@@ -1,208 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Resource Files\shader">
-      <UniqueIdentifier>{c1c58d2f-0d2c-49a1-9643-3c30a5e8e33e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\texture">
-      <UniqueIdentifier>{a8ffd59c-3be0-43be-8851-f55e837e7965}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game">
-      <UniqueIdentifier>{9a61ebd4-e7c5-452c-91ae-fcb023658e38}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine">
-      <UniqueIdentifier>{3d1f41da-b3d6-4401-b91d-a7c3f82240bd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Window">
-      <UniqueIdentifier>{0488d518-88fe-405c-96f8-2d2e0fc106e2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Graphics">
-      <UniqueIdentifier>{517f87d9-bef2-482e-ba5b-a191b8af3979}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Graphics\Shader">
-      <UniqueIdentifier>{610bafbc-6329-4911-be82-93b6809949ba}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\GLStructure">
-      <UniqueIdentifier>{f881433b-97c7-47f6-8121-5050f47bde94}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\GLStructure\Vao">
-      <UniqueIdentifier>{fc1f062e-4f6e-4425-8b54-592c7994d54b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Graphics\Texture">
-      <UniqueIdentifier>{6159899c-056e-4267-b2ba-efd7296ac734}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Graphics\Texture\TextureManager">
-      <UniqueIdentifier>{4b98a5cd-b84f-47b8-a1a0-21934770eaf5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Camera">
-      <UniqueIdentifier>{2ea4c259-d07a-43e0-8c2d-2a433499db8e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\GLStructure\BufferObject">
-      <UniqueIdentifier>{212cf780-0091-488e-84c4-53adcd6911d9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Network">
-      <UniqueIdentifier>{f73c695f-ed5c-42e1-a7bb-77400054e88d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Network\Serveur">
-      <UniqueIdentifier>{8f7903c7-5b20-4693-ae84-a8d3ba0c92f8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Network\Client">
-      <UniqueIdentifier>{1d9c856f-91ac-479f-bbef-6ba7e5dead97}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\ChunkMap">
-      <UniqueIdentifier>{815114f8-e502-467c-9238-fb92d89d5446}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Chunk">
-      <UniqueIdentifier>{79b1b6d9-a6f3-4c65-a7dd-f0ef195b6d09}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Voxel">
-      <UniqueIdentifier>{34df16fa-3749-4aa1-b562-e2f2c461ea6a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Face">
-      <UniqueIdentifier>{fce40ec1-223d-4db7-8feb-e5c2739e0a1c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Side">
-      <UniqueIdentifier>{f4bb697d-8f66-4ef4-87ef-fdad58fedd40}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\Quad">
-      <UniqueIdentifier>{fcd97839-ff53-4a72-9abf-33e8602b481b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Game\Engine\QuadGroups">
-      <UniqueIdentifier>{1673631f-0c22-43e4-840a-cf2976180c4e}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="glad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="stb.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\buffer.cpp">
-      <Filter>Source Files\Game\Engine\GLStructure\BufferObject</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\cameraProgram.cpp">
-      <Filter>Source Files\Game\Engine\Camera</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\game.cpp">
-      <Filter>Source Files\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\network_client.cpp">
-      <Filter>Source Files\Game\Network\Client</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\network_server.cpp">
-      <Filter>Source Files\Game\Network\Serveur</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\shaderProgram.cpp">
-      <Filter>Source Files\Game\Engine\Graphics\Shader</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\textureManager.cpp">
-      <Filter>Source Files\Game\Engine\Graphics\Texture\TextureManager</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\VAO.cpp">
-      <Filter>Source Files\Game\Engine\GLStructure\Vao</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\window.cpp">
-      <Filter>Source Files\Game\Engine\Window</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\src\face.cpp">
-      <Filter>Source Files\Game\Engine\Face</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="SourceCode\src\buffer.h">
-      <Filter>Source Files\Game\Engine\GLStructure\BufferObject</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\cameraProgram.h">
-      <Filter>Source Files\Game\Engine\Camera</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\game.h">
-      <Filter>Source Files\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\network_client.h">
-      <Filter>Source Files\Game\Network\Client</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\network_server.h">
-      <Filter>Source Files\Game\Network\Serveur</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\shaderProgram.h">
-      <Filter>Source Files\Game\Engine\Graphics\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\textureManager.h">
-      <Filter>Source Files\Game\Engine\Graphics\Texture\TextureManager</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\VAO.h">
-      <Filter>Source Files\Game\Engine\GLStructure\Vao</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\window.h">
-      <Filter>Source Files\Game\Engine\Window</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\side.h">
-      <Filter>Source Files\Game\Engine\Side</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\face.h">
-      <Filter>Source Files\Game\Engine\Face</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\quad.h">
-      <Filter>Source Files\Game\Engine\Quad</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\src\quadGroups.h">
-      <Filter>Source Files\Game\Engine\QuadGroups</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="SourceCode\Ressources\shader\default.frag">
-      <Filter>Resource Files\shader</Filter>
-    </None>
-    <None Include="SourceCode\Ressources\shader\default.vert">
-      <Filter>Resource Files\shader</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="SourceCode\Ressources\texture\cobblestone.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\dirt.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\grass.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\grass_side.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\leaves.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\log_side.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\log_top.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\planks.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\sand.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-    <Image Include="SourceCode\Ressources\texture\stone.png">
-      <Filter>Resource Files\texture</Filter>
-    </Image>
-  </ItemGroup>
-</Project>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
